@@ -1,3 +1,7 @@
+2006-10-09  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditPerson.py: add person's name to title
+	* src/RelLib/_Name.py: add empty check
+
 2006-10-08  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/DetAncestralReport.py: fix DAR-Endnotes indent
 	* src/plugins/DetDescendantReport.py: fix DDR-Endnotes indent
